Se muestran los autos

--- a/products.html
+++ b/products.html
@@ -36,10 +36,16 @@
       </div>
     </div>
   </nav>
+  <head>
+    <div class="m-5 container">
+        <h1 class="d-flex justify-content-center">PRODUCTOS</h2>
+        <p id = "categoria" class="d-flex justify-content-center"></p>
+    </div>
+  </head>
   <main class="pb-5 container">
     <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
+      <div id="productos">
+
       </div>
     </div>
   </main>
