--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 </head>
 
 <body>
-  <script src="https://accounts.google.com/gsi/client" async defer></script>
   <main class="mt-5">
     <div class="container">
       <img id="logoLogin" src="img/login.png" alt="Logo de la página">
@@ -37,26 +36,29 @@
           </div>
         
           <button type="submit" class="btn btn-primary mt-2 inputLogin" id="botonLogin">Ingresar</button>
-          <div id="g_id_onload"
-            data-client_id="962699925016-rc80qcj05auboi3vr4rif6iba6hvpqj4.apps.googleusercontent.com"
-            data-callback="redirect">
-          </div>
-          <div class="g_id_signin" data-type="standard"></div>
         </form>  
+
+        <hr id="sepLogin">
+        <h3 class="center">ó</h3>
+        
+        <div id="g_id_onload"
+          data-client_id="962699925016-rc80qcj05auboi3vr4rif6iba6hvpqj4.apps.googleusercontent.com"
+          data-callback="redirect">
+        </div>
+        <div class="g_id_signin inputLogin" data-type="standard"></div>
+
       </div>
     </div>
   </main>
   <footer class="text-muted">
     <div class="container">
-      <p class="float-end">
-        <a href="#">Volver arriba</a>
-      </p>
       <p>Este sitio forma parte de <a href="https://jovenesaprogramar.edu.uy/" target="_blank">Jovenes a Programar</a> -
         2022</p>
       <p>Clickea <a target="_blank" href="Letra.pdf">aquí</a> para descargar la letra del obligatorio.</p>
     </div>
   </footer>
   <script src="js/login.js"></script>
+  <script src="https://accounts.google.com/gsi/client" async defer></script>
 </body>
 
 </html>
