--- a/index.html
+++ b/index.html
@@ -41,21 +41,23 @@
         <hr id="sepLogin">
         <h3 class="center">ó</h3>
         
-        <div id="g_id_onload"
-          data-client_id="962699925016-rc80qcj05auboi3vr4rif6iba6hvpqj4.apps.googleusercontent.com"
-          data-context="signin"
-          data-ux_mode="popup"
-          data-callback="redirect"
-          data-auto_prompt="false">
-        </div>
+        <div class="inputLogin">
+          <div id="g_id_onload"
+            data-client_id="962699925016-rc80qcj05auboi3vr4rif6iba6hvpqj4.apps.googleusercontent.com"
+            data-context="signin"
+            data-ux_mode="popup"
+            data-callback="redirect"
+            data-auto_prompt="false">
+          </div>
 
-        <div class="g_id_signin"
-          data-type="standard"
-          data-shape="pill"
-          data-theme="filled_black"
-          data-text="$ {button.text}"
-          data-size="large"
-          data-logo_alignment="left">
+          <div class="g_id_signin inputLogin"
+            data-type="standard"
+            data-shape="pill"
+            data-theme="filled_black"
+            data-text="$ {button.text}"
+            data-size="large"
+            data-logo_alignment="left">
+          </div>
         </div>
         
       </div>
