--- a/index.html
+++ b/index.html
@@ -43,20 +43,19 @@
         
         <div class="inputLogin">
           <div id="g_id_onload"
-            data-client_id="962699925016-rc80qcj05auboi3vr4rif6iba6hvpqj4.apps.googleusercontent.com"
-            data-context="signin"
-            data-ux_mode="popup"
-            data-callback="redirect"
-            data-auto_prompt="false">
+              data-client_id="962699925016-rc80qcj05auboi3vr4rif6iba6hvpqj4.apps.googleusercontent.com"
+              data-context="signin"
+              data-ux_mode="popup"
+              data-callback="redirect"
+              data-auto_prompt="false">
           </div>
 
-          <div class="g_id_signin inputLogin"
-            data-type="standard"
-            data-shape="pill"
-            data-theme="filled_black"
-            data-text="$ {button.text}"
-            data-size="large"
-            data-logo_alignment="left">
+          <div class="g_id_signin"
+              data-type="icon"
+              data-shape="circle"
+              data-theme="filled_black"
+              data-text="$ {button.text}"
+              data-size="large">
           </div>
         </div>
         
