--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="container" id="contenedorLogin">
         <h3 class="inputLogin">Inicio de sesión</h3>
         
-        <form action="#"  id="formLogin">
+        <form action="#" onsubmit="return redirect();">
           <div class="form-floating inputLogin">
             <input placeholder="email@dominio.com" type="email" class="form-control" name="emailInicio" id="emailInicio" required>
             <label for="emailInicio">Email</label>
