Se arregla mail en navbar

--- a/inicio.html
+++ b/inicio.html
@@ -31,7 +31,7 @@
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
           <li class="nav-item">
-            <p id="usuario">Hola, </p>
+            <p id="usuario"></p>
           </li>
         </ul>
       </div>
@@ -90,7 +90,7 @@
     </div>
   </footer>
   <script src="js/bootstrap.bundle.min.js"></script>
-  <script src="js/index.js"></script>
+  <script src="js/inicio.js"></script>
   <script src="js/init.js"></script>
 </body>
 
