--- a/my-profile.html
+++ b/my-profile.html
@@ -46,7 +46,7 @@
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
           <li class="nav-item">
-            <p id="usuario">Hola, </p>
+            <p id="usuario"></p>
           </li>
         </ul>
       </div>
