--- a/sell.html
+++ b/sell.html
@@ -31,7 +31,7 @@
             <a class="nav-link active" href="sell.html">Vender</a>
           </li>
           <li class="nav-item">
-            <p id="usuario">Hola, </p>
+            <p id="usuario"></p>
           </li>
         </ul>
       </div>
