Se cambiar callback y funcion en logis.js

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             data-client_id="962699925016-rc80qcj05auboi3vr4rif6iba6hvpqj4.apps.googleusercontent.com"
             data-context="signin"
             data-ux_mode="popup"
-            data-callback="redirect"
+            data-callback="redirectGoogle"
             data-auto_prompt="false">
           </div>
 
