--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
     </div>
   </footer>
   <script src="js/login.js"></script>
+  <script src="js/jwt-decode.js"></script>
   <script src="https://accounts.google.com/gsi/client" async defer></script>
 </body>
 
