--- a/products.html
+++ b/products.html
@@ -46,7 +46,7 @@
   </head>
   <main class="pb-5 container">
     <div class="container">
-      <div class="row">
+      <!--<div class="row">
         <div class="col text-end">
           <div class="btn-group btn-group-toggle mb-4" data-bs-toggle="buttons">
             <input type="radio" class="btn-check" name="options" id="sortAsc">
@@ -57,7 +57,7 @@
             <label class="btn btn-light" for="sortByCount"><i class="fa-solid fa-arrow-down-wide-short"></i></label>
           </div>
         </div>
-      </div>
+      </div>-->
       <div class="row">
         <div class="col-lg-6 offset-lg-6 col-md-12 mb-1 container">
           <div class="row container p-0 m-0">
