--- a/categories.html
+++ b/categories.html
@@ -40,7 +40,7 @@
   </nav>
   <main class="pb-5">
     <div class="text-center p-4">
-      <h2>Categorías</h2>
+      <h2 class="tituloSeccion">Categorías</h2>
       <p class="lead">Verás aquí todas las categorías del sitio.</p>
     </div>
     <div class="container">
