--- a/categories.html
+++ b/categories.html
@@ -10,6 +10,7 @@
   <link href="css/font-awesome.min.css" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400&display=swap" rel="stylesheet">
   <link rel="icon" href="img/logo-removebg-preview.ico">
 </head>
 
@@ -18,18 +19,24 @@
     <div class="container">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon" id="toggler-text"></span>
+        <span id="toggler-text">MENU</span>
       </button>
+      
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav w-100 justify-content-between">
           <li class="nav-item">
             <a class="nav-link" href="inicio.html">Inicio</a>
           </li>
+          <div class="dropdown">
+            <li class="nav-item" id="navbar-categories">
+              <a class="nav-link active dropbtn disabled" role="button" href="categories.html">Categorías</a>
+              <div id="categories-menu">
+              </div>
+            </li>
+          </div>
           <li class="nav-item">
-            <a class="nav-link active" href="categories.html">Categorías</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="sell.html">Vender</a>
+            <a class="nav-link" href="sell.html" id="vender">Vender</a>
           </li>
           <li class="nav-item">
             <p id="usuario"></p>
@@ -103,6 +110,7 @@
   </div>
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/init.js"></script>
+  <script src="js/general-functions.js"></script>
   <script src="js/categories.js"></script>
 </body>
 
