--- a/inicio.html
+++ b/inicio.html
@@ -8,8 +8,8 @@
 
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400&display=swap" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
   <link rel="icon" href="img/logo-removebg-preview.ico">
@@ -21,17 +21,23 @@
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
+        <span id="toggler-text">MENU</span>
       </button>
+      
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav w-100 justify-content-between">
           <li class="nav-item">
-            <a class="nav-link active" href="inicio.html">Inicio</a>
+            <a class="nav-link active disabled" href="inicio.html" style="color: white;">Inicio</a>
           </li>
+          <div class="dropdown">
+            <li class="nav-item" id="navbar-categories">
+              <a class="nav-link dropbtn" role="button" href="categories.html">Categorías</a>
+              <div id="categories-menu">
+              </div>
+            </li>
+          </div>
           <li class="nav-item">
-            <a class="nav-link" href="categories.html">Categorías</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="sell.html">Vender</a>
+            <a class="nav-link" href="sell.html" id="vender">Vender</a>
           </li>
           <li class="nav-item">
             <p id="usuario"></p>
@@ -92,9 +98,20 @@
       <p>Clickea <a target="_blank" href="Letra.pdf">aquí</a> para descargar la letra del obligatorio.</p>
     </div>
   </footer>
+  <div id="spinner-wrapper">
+    <div class="lds-ring">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+  </div>
   <script src="js/bootstrap.bundle.min.js"></script>
-  <script src="js/inicio.js"></script>
+  
   <script src="js/init.js"></script>
+  <script src="js/general-functions.js"></script>
+  <script src="js/inicio.js"></script>
+  
 </body>
 
 </html>
