--- a/products.html
+++ b/products.html
@@ -10,6 +10,7 @@
   <link href="css/font-awesome.min.css" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400&display=swap" rel="stylesheet">
   <link rel="icon" href="img/logo-removebg-preview.ico">
 </head>
 
@@ -19,17 +20,23 @@
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
+        <span id="toggler-text">MENU</span>
       </button>
+      
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav w-100 justify-content-between">
           <li class="nav-item">
             <a class="nav-link" href="inicio.html">Inicio</a>
           </li>
+          <div class="dropdown">
+            <li class="nav-item" id="navbar-categories">
+              <a class="nav-link active dropbtn" role="button" href="categories.html">Categorías</a>
+              <div id="categories-menu">
+              </div>
+            </li>
+          </div>
           <li class="nav-item">
-            <a class="nav-link" href="categories.html">Categorías</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="sell.html">Vender</a>
+            <a class="nav-link" href="sell.html" id="vender">Vender</a>
           </li>
           <li class="nav-item">
             <p id="usuario"></p>
@@ -49,7 +56,7 @@
     </div>
     <div id="container">
       <div class="row">
-        <div id="filtros" class="col">
+        <div id="filtros" class="col-xs-4 col-md-3">
           <h3>Filtros</h3>
           <div class="mt-2">
             <div class="row mb-2">
@@ -76,8 +83,8 @@
           </div>
         </div>
 
-        <div class="col-9">
-          <div class="container">
+        <div class="col-xs-8 col-md-8">
+          <div class="container container-productos">
             <div id="productos">
       
             </div>
@@ -110,6 +117,7 @@
   </div>
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/init.js"></script>
+  <script src="js/general-functions.js"></script>
   <script src="js/products.js"></script>
   <script src="https://kit.fontawesome.com/63805598a1.js" crossorigin="anonymous"></script>
 </body>
