Cambio fuente y coments

--- a/product-info.html
+++ b/product-info.html
@@ -68,8 +68,8 @@
       <hr>
       <div class="row">
         <div class="container">
+          <h3 id="comentTitle">Comentarios</h3>
           <div id="comentarios" class="container">
-            <h3>Comentarios</h3>
 
           </div>
           <div id="containerNewComent" class="form-group">
