--- a/cart.html
+++ b/cart.html
@@ -25,7 +25,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav w-100 justify-content-between">
           <li class="nav-item">
-            <a class="nav-link" href="inicio.html">Inicio</a>
+            <a class="nav-link active" href="index.html">Inicio</a>
           </li>
           <div class="dropdown">
             <li class="nav-item" id="navbar-categories">
@@ -37,8 +37,9 @@
           <li class="nav-item">
             <a class="nav-link" href="sell.html" id="vender">Vender</a>
           </li>
-          <li class="nav-item">
-            <p id="usuario"></p>
+          <li id="usuario" class="nav-item">
+            <a style="display: none;" id="botonLogin" class="nav-link" href="login.html">Iniciar Sesión</a>
+            <p id="saludoUsuario"></p>
           </li>
         </ul>
       </div>
