--- a/my-profile.html
+++ b/my-profile.html
@@ -33,20 +33,26 @@
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
+        <span id="toggler-text">MENU</span>
       </button>
+      
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav w-100 justify-content-between">
           <li class="nav-item">
-            <a class="nav-link" href="inicio.html">Inicio</a>
+            <a class="nav-link" href="index.html">Inicio</a>
           </li>
+          <div class="dropdown">
+            <li class="nav-item" id="navbar-categories">
+              <a class="nav-link dropbtn" role="button" href="categories.html">Categorías</a>
+              <div id="categories-menu">
+              </div>
+            </li>
+          </div>
           <li class="nav-item">
-            <a class="nav-link" href="categories.html">Categorías</a>
+            <a class="nav-link" href="sell.html" id="vender">Vender</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="sell.html">Vender</a>
-          </li>
-          <li class="nav-item">
-            <p id="usuario"></p>
+          <li id="usuario" class="nav-item">
+            <a id="botonLogin" class="nav-link" href="login.html">Iniciar Sesión</a>
           </li>
         </ul>
       </div>
