--- a/sell.html
+++ b/sell.html
@@ -25,7 +25,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav w-100 justify-content-between">
           <li class="nav-item">
-            <a class="nav-link active" href="index.html">Inicio</a>
+            <a class="nav-link" href="index.html">Inicio</a>
           </li>
           <div class="dropdown">
             <li class="nav-item" id="navbar-categories">
@@ -35,7 +35,7 @@
             </li>
           </div>
           <li class="nav-item">
-            <a class="nav-link" href="sell.html" id="vender">Vender</a>
+            <a class="nav-link active" href="sell.html" id="vender">Vender</a>
           </li>
           <li id="usuario" class="nav-item">
             <a style="display: none;" id="botonLogin" class="nav-link" href="login.html">Iniciar Sesión</a>
