--- a/product-info.html
+++ b/product-info.html
@@ -28,11 +28,11 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav w-100 justify-content-between">
           <li class="nav-item">
-            <a class="nav-link active" href="index.html">Inicio</a>
+            <a class="nav-link" href="index.html">Inicio</a>
           </li>
           <div class="dropdown">
             <li class="nav-item" id="navbar-categories">
-              <a class="nav-link dropbtn" role="button" href="categories.html">Categorías</a>
+              <a class="nav-link active dropbtn" role="button" href="categories.html">Categorías</a>
               <div id="categories-menu">
               </div>
             </li>
