Se agrega comentarios en LS de varios usuarios

--- a/sell.html
+++ b/sell.html
@@ -35,7 +35,7 @@
             </li>
           </div>
           <li class="nav-item">
-            <a class="nav-link active" href="sell.html" id="vender">Vender</a>
+            <a class="nav-link disabled active" href="sell.html" id="vender">Vender</a>
           </li>
           <li id="usuario" class="nav-item">
             <a style="display: none;" id="botonLogin" class="nav-link" href="login.html">Iniciar Sesión</a>
