--- a/categories.html
+++ b/categories.html
@@ -30,7 +30,7 @@
           </li>
           <div class="dropdown">
             <li class="nav-item" id="navbar-categories">
-              <a class="nav-link active dropbtn" role="button" href="categories.html">Categorías</a>
+              <a class="nav-link active disabled dropbtn" role="button" href="categories.html">Categorías</a>
               <div id="categories-menu">
               </div>
             </li>
