--- a/product-info.html
+++ b/product-info.html
@@ -41,8 +41,9 @@
             <a class="nav-link" href="sell.html" id="vender">Vender</a>
           </li>
           <li id="usuario" class="nav-item">
-            <a style="display: none;" id="botonLogin" class="nav-link" href="login.html">Iniciar Sesión</a>
+            <a id="botonLogin" class="nav-link" href="login.html">Iniciar Sesión</a>
             <p id="saludoUsuario"></p>
+            <a id="botonLogout" class="nav-link" href="#">Cerrar Sesión</a>
           </li>
         </ul>
       </div>
