--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
   <link rel="icon" href="img/logo-removebg-preview.ico">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
 <body>
@@ -41,10 +42,18 @@
           </li>
           <li id="usuario" class="nav-item">
             <a id="botonLogin" class="nav-link" href="login.html">Iniciar Sesión</a>
-            <p id="saludoUsuario"></p>
-            <a id="botonLogout" class="nav-link" href="#">Cerrar Sesión</a>
+            <div class="dropdown">
+              <div id="conjuntoUsuario">
+                <span id="saludoUsuario"></span>
+                <span id="optionsUserDrp" role="button" class="drop-btn nav-link material-symbols-outlined" style="margin-left: 0px; color: rgb(211, 238, 185);">more_vert</span>
+              </div>
+              <div id="optionsUser">
+                <a class="dropdown-item" href="my-profile.html">Mi perfil</a>
+                <a class="dropdown-item" href="cart.html">Mi carrito</a>
+                <a id="botonLogout" class="dropdown-item" href="#">Cerrar Sesión</a>
+              </div>
+            </div>
           </li>
-          
         </ul>
       </div>
     </div>
