--- a/my-profile.html
+++ b/my-profile.html
@@ -9,6 +9,7 @@
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
   <link rel="icon" href="img/logo-removebg-preview.ico">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <style>
     .bd-placeholder-img {
       font-size: 1.125rem;
@@ -53,6 +54,17 @@
           </li>
           <li id="usuario" class="nav-item">
             <a id="botonLogin" class="nav-link" href="login.html">Iniciar Sesión</a>
+            <div class="dropdown">
+              <div id="conjuntoUsuario">
+                <span id="saludoUsuario"></span>
+                <span id="optionsUserDrp" role="button" class="drop-btn nav-link material-symbols-outlined" style="margin-left: 0px; color: rgb(211, 238, 185);">more_vert</span>
+              </div>
+              <div id="optionsUser">
+                <a class="dropdown-item" href="my-profile.html">Mi perfil</a>
+                <a class="dropdown-item" href="cart.html">Mi carrito</a>
+                <a id="botonLogout" class="dropdown-item" href="#">Cerrar Sesión</a>
+              </div>
+            </div>
           </li>
         </ul>
       </div>
