Se agrega prodRelated

--- a/product-info.html
+++ b/product-info.html
@@ -79,7 +79,7 @@
       <hr>
       <div class="row">
         <div class="container">
-          <h3 id="comentTitle">Comentarios</h3>
+          <h3 class="subtitleInfoProducts">Comentarios</h3>
           <div id="comentarios" class="container">
             <p id="noComent">Todavía no hay comentarios</p>
           </div>
@@ -97,6 +97,15 @@
               <button id="sendComent" class="btn btn-secondary" type="submit">Enviar</button>
             </div>
             
+          </div>
+        </div>
+      </div>
+      <hr>
+      <div class="row">
+        <div class="container">
+          <h3 class="subtitleInfoProducts">Productos relacionados</h3>
+          <div id="relatedProducts" class="container">
+
           </div>
         </div>
       </div>
