--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <a class="nav-link" href="sell.html" id="vender">Vender</a>
           </li>
           <li id="usuario" class="nav-item">
-            <a id="botonLogin" class="nav-link" href="login.html">Iniciar Sesión</a>
+            <p id="botonLogin" class="nav-link" href="login.html" role="button" data-bs-toggle="modal" data-bs-target="#modalLogin">Iniciar Sesión</p>
             <div class="dropdown">
               <div id="conjuntoUsuario">
                 <span id="saludoUsuario"></span>
@@ -59,6 +59,9 @@
     </div>
   </nav>
   <main>
+    <div id="modalLogin" class="modal fade" tabindex="-1" aria-hidden="true">
+    
+    </div>
     <div class="jumbotron text-center"></div>
     <div class="album py-5 bg-light">
       <div class="container">
