Emprolija product-info.js

--- a/cart.html
+++ b/cart.html
@@ -47,7 +47,7 @@
               <div id="optionsUser">
                 <a class="dropdown-item" href="my-profile.html">Mi perfil</a>
                 <a class="dropdown-item" href="cart.html">Mi carrito</a>
-                <a id="botonLogout" class="dropdown-item" href="#">Cerrar Sesión</a>
+                <a id="botonLogout" class="dropdown-item" data-toggle="modal" data-target="#modalLogin" href="#">Cerrar Sesión</a>
               </div>
             </div>
           </li>
@@ -150,6 +150,7 @@
   <script src="https://accounts.google.com/gsi/client" async defer></script>
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/init.js"></script>
+  <script src="js/general-functions.js"></script>
   <script src="js/cart.js"></script>
 </body>
 
