--- a/product-info.html
+++ b/product-info.html
@@ -49,7 +49,7 @@
               <div id="optionsUser">
                 <a class="dropdown-item" href="my-profile.html">Mi perfil</a>
                 <a class="dropdown-item" href="cart.html">Mi carrito</a>
-                <a id="botonLogout" class="dropdown-item" href="#">Cerrar Sesión</a>
+                <a id="botonLogout" class="dropdown-item" data-toggle="modal" data-target="#modalLogin" href="#">Cerrar Sesión</a>
               </div>
             </div>
           </li>
