--- a/my-profile.html
+++ b/my-profile.html
@@ -40,7 +40,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav w-100 justify-content-between">
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Inicio</a>
+            <a class="nav-link active" href="index.html">Inicio</a>
           </li>
           <div class="dropdown">
             <li class="nav-item" id="navbar-categories">
@@ -53,8 +53,7 @@
             <a class="nav-link" href="sell.html" id="vender">Vender</a>
           </li>
           <li id="usuario" class="nav-item">
-            <a id="botonLogin" class="nav-link" href="login.html">Iniciar Sesión</a>
-            <div class="dropdown">
+            <p id="botonLogin" class="nav-link" href="login.html" role="button" data-toggle="modal" data-target="#modalLogin">Iniciar Sesión</p>            <div class="dropdown">
               <div id="conjuntoUsuario">
                 <span id="saludoUsuario"></span>
                 <span id="optionsUserDrp" role="button" class="drop-btn nav-link material-symbols-outlined" style="margin-left: 0px; color: rgb(211, 238, 185);">more_vert</span>
@@ -62,7 +61,7 @@
               <div id="optionsUser">
                 <a class="dropdown-item" href="my-profile.html">Mi perfil</a>
                 <a class="dropdown-item" href="cart.html">Mi carrito</a>
-                <a id="botonLogout" class="dropdown-item" href="#">Cerrar Sesión</a>
+                <a id="botonLogout" class="dropdown-item" data-toggle="modal" data-target="#modalLogin" href="#">Cerrar Sesión</a>
               </div>
             </div>
           </li>
@@ -87,9 +86,25 @@
       <p>Clickea <a target="_blank" href="Letra.pdf">aquí</a> para descargar la letra del obligatorio.</p>
     </div>
   </footer>
-  <script src="js/bootstrap.bundle.min.js"></script>
+  <div id="spinner-wrapper">
+    <div class="lds-ring">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+  </div>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   <script src="js/init.js"></script>
+  <script src="js/login.js"></script>
+  <script src="js/jwt-decode.js"></script>
+  <script src="https://accounts.google.com/gsi/client" async defer></script>
+  <script src="js/bootstrap.bundle.min.js"></script>
+  <script src="js/general-functions.js"></script>
   <script src="js/my-profile.js"></script>
+  
 </body>
 
 </html>
