--- a/product-info.html
+++ b/product-info.html
@@ -146,8 +146,8 @@
             <h1 id="nameProd"></h1>
             <p id="descriptionProd"></p>
             <h2 id="costProd"></h2>
-            <button class="btn btn-primary">Comprar</button>
-            <p id="soldProd"></p>
+            <button id="botonComprar" class="btn btn-primary">Comprar</button>
+            <p class="text-muted" id="soldProd"></p>
           </div>
         </div>
       </div>
