--- a/cart.html
+++ b/cart.html
@@ -65,7 +65,7 @@
         <table class="table">
           <thead>
             <tr>
-              <th scope="col">#</th>
+              <th scope="col">Imagen</th>
               <th scope="col">Nombre</th>
               <th scope="col">Costo</th>
               <th scope="col">Cantidad</th>
@@ -73,12 +73,6 @@
             </tr>
           </thead>
           <tbody id="tableCart">
-            <tr>
-              <th scope="row">1</th>
-              <td>Mark</td>
-              <td>Otto</td>
-              <td>@mdo</td>
-            </tr>
           </tbody>
         </table>
       </div>
