termina cart.html

--- a/product-info.html
+++ b/product-info.html
@@ -146,7 +146,7 @@
             <h1 id="nameProd"></h1>
             <p id="descriptionProd"></p>
             <h2 id="costProd"></h2>
-            <button id="botonComprar" class="btn btn-primary">Comprar</button>
+            <button id="botonComprar" class="mb-2 btn btn-primary">Comprar</button> <p id="textoBtnComprar"></p>
             <p class="text-muted" id="soldProd"></p>
           </div>
         </div>
@@ -213,7 +213,6 @@
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/init.js"></script>
   <script src="js/general-functions.js"></script>
-  <script src="js/cart.js"></script>
   <script src="js/product-info.js"></script>
 </body>
 
