--- a/cart.html
+++ b/cart.html
@@ -41,7 +41,8 @@
             <a class="nav-link" href="sell.html" id="vender">Vender</a>
           </li>
           <li id="usuario" class="nav-item">
-            <p id="botonLogin" class="nav-link" href="login.html" role="button" data-toggle="modal" data-target="#modalLogin">Iniciar Sesión</p>            <div class="dropdown">
+            <p id="botonLogin" class="nav-link" href="login.html" role="button" data-toggle="modal" data-target="#modalLogin">Iniciar Sesión</p>
+            <div class="dropdown">
               <div id="conjuntoUsuario">
                 <span id="saludoUsuario"></span>
                 <span id="optionsUserDrp" role="button" class="drop-btn nav-link material-symbols-outlined" style="margin-left: 0px; color: rgb(211, 238, 185);">more_vert</span>
