--- a/cart.html
+++ b/cart.html
@@ -211,6 +211,9 @@
                 </div>
               </div>
             </div>
+            <div class="modal-footer">
+              <button class="btn btn-secondary" data-toggle="modal" data-target="#modalPago">Cerrar</button>
+            </div>
           </div>
         </div>
       </div>
