--- a/cart.html
+++ b/cart.html
@@ -28,7 +28,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav w-100 justify-content-between">
           <li class="nav-item">
-            <a class="nav-link active" href="index.html">Inicio</a>
+            <a class="nav-link" href="index.html">Inicio</a>
           </li>
           <div class="dropdown">
             <li class="nav-item" id="navbar-categories">
@@ -79,6 +79,10 @@
             <tbody id="tableCart">
             </tbody>
           </table>
+          <div class="container" style="display: none;" id="mensajeCarritoVacio">
+            <p class="fs-4 text-center">No tienes ningun elemento en el carrito </p>
+            <a class="center link-dark fs-5" href="categories.html" style="text-decoration: none;">COMPRAR AHORA</a>
+          </div>
         </div>
       </div>
       
@@ -239,9 +243,9 @@
       </div>
     </div>
 
-    <input type="submit" form="formularioEnvio" value="Finalizar compra" class="mt-3 mb-3 btn btn-primary center w-75">
+    <input id="botonFinalizarCompra" type="submit" form="formularioEnvio" value="Finalizar compra" class="mt-3 mb-3 btn btn-primary center w-75">
     
-    <div id="alertaComprado" class="alert alert-primary alert-dismissible fade w-75" role="alert">
+    <div id="alertaComprado" class="alert alert-success alert-dismissible fade w-75" role="alert">
       ¡Has comprado con éxito!
       <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
