--- a/cart.html
+++ b/cart.html
@@ -176,7 +176,7 @@
                         <label class="col-form-label" for="vencimiento">Vencimiento (MM/AA)</label>
                         <input required disabled class="form-control iptPagoTarjeta iptValidar" name="formaPago" type="month" id="vencimiento">
                         <div class="invalid-feedback">
-                          Ingrese una fecha de vencimiento.
+                          Ingrese una fecha de vencimiento válida.
                         </div>
                       </div>
                     </div>
