se agrega cantidad a carrito

--- a/login.html
+++ b/login.html
@@ -19,8 +19,8 @@
 
 <body>
   <main class="mt-5">
-    <div class="container">
-      <img id="logoLogin" src="img/login.png" alt="Logo de la página">
+    <div class="container col-12 col-sm-10 col-md-7 col-lg-5">
+      <img class="w-100" id="logoLogin" src="img/login.png" alt="Logo de la página">
       <div class="container" id="contenedorLogin">
         <h3 class="inputLogin">Inicio de sesión</h3>
         
@@ -71,6 +71,7 @@
       <p>Clickea <a target="_blank" href="Letra.pdf">aquí</a> para descargar la letra del obligatorio.</p>
     </div>
   </footer>
+  <script src="js/init.js"></script>
   <script src="js/login.js"></script>
   <script src="js/jwt-decode.js"></script>
   <script src="https://accounts.google.com/gsi/client" async defer></script>
