--- a/cart.html
+++ b/cart.html
@@ -12,11 +12,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400&display=swap" rel="stylesheet">
   <link rel="icon" href="img/logo-removebg-preview.ico">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <script>
+    if(!localStorage.getItem('mail'))
+      window.location.href = 'index.html';
+  </script>
 </head>
 
 <body>
   <script src="js/general-functions.js"></script>
-  <script src="js/checkLogin.js"></script>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-1">
     <div class="container">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
