--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     </div>
 
     <div class="row jrow">
-      <img src="../img/cover_back.png" alt="">
+      <img src="img/cover_back.png" alt="">
     </div>
     <div class="row">
       <div class="album py-5 bg-light">
